@@ -51,11 +51,9 @@ package com.openexchange.push.ms;
 
 import static com.openexchange.java.Autoboxing.I2i;
 import static com.openexchange.java.Autoboxing.i;
-import java.io.Serializable;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
@@ -70,7 +68,6 @@ import com.openexchange.groupware.container.FolderObject;
 import com.openexchange.groupware.contexts.Context;
 import com.openexchange.groupware.infostore.DocumentMetadata;
 import com.openexchange.ms.Topic;
-import com.openexchange.session.Session;
 
 /**
  * {@link PushMsHandler} - Listens for locally distributed OSGi events notifying about changes.
@@ -101,18 +98,10 @@ public class PushMsHandler implements EventHandler {
     public void handleEvent(final Event e) {
         final CommonEvent event;
         {
-
-            // ------------------------------------------------------------------------- //
-
             final Object obj = e.getProperty(CommonEvent.EVENT_KEY);
             if (obj == null) {
-                // Handle events w/o a CommonEvent
-                handleNonCommonEvent(e);
                 return;
             }
-
-            // ------------------------------------------------------------------------- //
-
             try {
                 event = (CommonEvent) obj;
             } catch (final ClassCastException cce) {
@@ -169,34 +158,6 @@ public class PushMsHandler implements EventHandler {
         }
     }
 
-    private void handleNonCommonEvent(final Event e) {
-        // Just pass to topic if not remotely received before
-        if (e.getTopic().startsWith("com/openexchange/push") && !Boolean.TRUE.equals(e.getProperty("__isRemoteEvent"))) {
-            try {
-                publishTopic.publish(toPojo(e));
-            } catch (final RuntimeException ex) {
-                LOG.error("", ex);
-            }
-        }
-    }
-
-    private Map<String, Object> toPojo(final Event e) {
-        final Map<String, Object> m = new LinkedHashMap<String, Object>(8);
-        for (final String name : e.getPropertyNames()) {
-            final Object value = e.getProperty(name);
-            if (isPojo(value)) {
-                m.put(name, value);
-            } else if (Session.class.isInstance(value)) {
-                Map<String, Serializable> wrappedSession = PushMsSession.wrap((Session)value);
-                wrappedSession.put("__wrappedSessionName", name);
-                m.put("__wrappedSession", wrappedSession);
-            }
-        }
-        m.put("__topic", e.getTopic());
-        m.put("__pure", Boolean.TRUE);
-        return m;
-    }
-
     private void publish(final int folderId, final int[] users, final int module, final Context ctx, final long timestamp, final Event e) {
         if (users == null) {
             return;
@@ -206,12 +167,6 @@ public class PushMsHandler implements EventHandler {
         } catch (final RuntimeException ex) {
             LOG.error("", ex);
         }
-    }
-
-    private static final String POJO_PACKAGE = "java.lang.";
-
-    private boolean isPojo(final Object obj) {
-        return obj != null && obj.getClass().getName().startsWith(POJO_PACKAGE);
     }
 
     private void publishDelayed(final int folderId, final int[] users, final int module, final Context ctx, final long timestamp, final Event e) {
