@@ -70,8 +70,6 @@ public class PushMsInit {
 
     private volatile DelayPushQueue delayPushQueue;
 
-    private volatile String obfuscationKey;
-
     /**
      * Initializes a new {@link PushMsInit}.
      */
@@ -104,15 +102,6 @@ public class PushMsInit {
      */
     public DelayPushQueue getDelayPushQueue() {
         return delayPushQueue;
-    }
-
-    /**
-     * Gets the key to obfuscate sensible data
-     *
-     * @return The obfuscation key
-     */
-    public String getObfuscationKey() {
-        return obfuscationKey;
     }
 
     /**
@@ -155,20 +144,6 @@ public class PushMsInit {
                     int maxDelays = configService.getIntProperty("com.openexchange.push.ms.maxDelayDuration", 600000);
                     delayPushQueue = new DelayPushQueue(publishTopic, delayDuration, maxDelays);
                     this.delayPushQueue = delayPushQueue;
-                }
-            }
-        }
-        String obfuscationKey = this.obfuscationKey;
-        if (null == obfuscationKey) {
-            synchronized (this) {
-                obfuscationKey = this.obfuscationKey;
-                if (null == obfuscationKey) {
-                    ConfigurationService configService = Services.getService(ConfigurationService.class);
-                    if (null == configService) {
-                        throw MsExceptionCodes.ILLEGAL_STATE.create("Missing service: " + ConfigurationService.class.getName());
-                    }
-                    this.obfuscationKey = configService.getProperty("com.openexchange.sessiond.encryptionKey",
-                        "auw948cz,spdfgibcsp9e8ri+<#qawcghgifzign7c6gnrns9oysoeivn");
                 }
             }
         }
