@@ -49,14 +49,11 @@
 
 package com.openexchange.push.ms;
 
-import java.io.Serializable;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
 import java.util.Dictionary;
 import java.util.Hashtable;
-import java.util.LinkedHashMap;
 import java.util.Map;
-import java.util.Map.Entry;
 import org.osgi.service.event.Event;
 import org.osgi.service.event.EventAdmin;
 import com.openexchange.event.EventFactoryService;
@@ -86,8 +83,7 @@ public class PushMsListener implements MessageListener<Map<String, Object>> {
 
     @Override
     public void onMessage(final Message<Map<String, Object>> message) {
-        final Map<String, Object> m = message.getMessageObject();
-        final PushMsObject pushObj = PushMsObject.valueFor(m);
+        final PushMsObject pushObj = PushMsObject.valueFor(message.getMessageObject());
         if (null != pushObj) {
             if (!getHostname().equals(pushObj.getHostname())) {
                 LOG.debug("{} received PushMsObject: {}", getHostname(), pushObj);
@@ -127,34 +123,9 @@ public class PushMsListener implements MessageListener<Map<String, Object>> {
             } else {
                 LOG.debug("Recieved PushMsObject's host name is equal to this listener's host name: {}. Ignore...", getHostname());
             }
-        } else if (message.isRemote() && m.containsKey("__pure")) {
-            final EventAdmin eventAdmin = Services.getServiceLookup().getService(EventAdmin.class);
-            if (null != eventAdmin) {
-                final Event event = eventFrom(m);
-                eventAdmin.postEvent(event);
-            }
+        } else {
+            LOG.debug("Received null from topic. Ignore...");
         }
-    }
-
-    private Event eventFrom(final Map<String, Object> m) {
-        if (null == m) {
-            return null;
-        }
-        final String topic = (String) m.get("__topic");
-        final Map<String, Object> props = new LinkedHashMap<String, Object>(12);
-        for (final Entry<String, Object> entry : m.entrySet()) {
-            final String key = entry.getKey();
-            if ("__wrappedSession".equals(key)) {
-                @SuppressWarnings("unchecked")
-                final Map<String, Serializable> wrappedSession = (Map<String, Serializable>) entry.getValue();
-                props.put((String) wrappedSession.get("__wrappedSessionName"), PushMsSession.unwrap(wrappedSession));
-            } else if (!"__topic".equals(key) && !"__pure".equals(key)) {
-                props.put(key, entry.getValue());
-            }
-        }
-        // Mark that event as remotely received
-        props.put("__isRemoteEvent", Boolean.TRUE);
-        return new Event(topic, props);
     }
 
     private String getHostname() {
